@@ -1,5 +1,10 @@
 2005-05-04  John Levon  <levon@movementarian.org>
 
+	* daemon/liblegacy/opd_kernel.c: fix previous workaround
+	  so it only triggers on x86
+
+2005-05-04  John Levon  <levon@movementarian.org>
+
 	* libutil++/op_bfd.h:
 	* libutil++/op_bfd.cpp: don't assume .text is the first SEC_CODE
 	  section. Keep a map of section file offsets to fix up dbfd
